@@ -11,8 +11,9 @@
   </replace>
 
   <replace css:content="table.listing">
-    <table class="table table-striped">
-      <xsl:copy-of select="./@*[local-name() != 'class']"/>
+    <table>
+      <xsl:copy-of select="@*"/>
+      <xsl:attribute name="class"><xsl:value-of select="@class" /> table table-striped</xsl:attribute>
       <xsl:apply-templates />
     </table>
   </replace>
