@@ -4,6 +4,8 @@ Changelog
 1.0 (unreleased)
 ------------------
 
+- Bootstrap: improve form field styles for table radio listings.
+  [davidjb]
 - Bootstrap: improve form layout for different checkbox/radio
   input fields.
   [davidjb]
